fix text alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -439,7 +439,7 @@ h4 {
   .chosen-projects {
     margin-left: 60px;
     justify-content: flex-start;
-    width: 71%;
+    width: 83.5%;
     margin-bottom: 20px;
 
 
@@ -471,7 +471,7 @@ h4 {
     justify-content: space-evenly;
     align-items: center;
     border-radius: 30px;
-    width: 70%;
+    width: 82.5%;
 
     @media screen and (max-width: 900px) {
       margin-top: 150px
@@ -513,6 +513,7 @@ h4 {
     padding: 30px;
     display: flex;
     flex-direction: column-reverse;
+
 
     .content__container {
       margin: 0;
